<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_frontbg22">

    <TextView
        android:id="@+id/edtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:gravity="bottom"
        android:maxWidth="60dp"
        android:minHeight="90dp"
        android:text="@string/hi"
        android:textColor="#101010"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edtdescription"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="top"
        android:maxWidth="20dp"
        android:minHeight="10dp"
        android:text="@string/nxt"
        android:textColor="#0C0C0C"
        android:textSize="16dp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/edtdescription2"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginLeft="1dp"
        android:ems="10"
        android:gravity="top"
        android:maxWidth="20dp"
        android:minHeight="10dp"
        android:text="@string/nxt2"
        android:textColor="#0E0E0E"
        android:textSize="16dp"
        android:textStyle="italic"
        tools:ignore="DuplicateIds" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button1"
            android:layout_width="153dp"
            android:layout_height="76dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="360dp"
            android:background="#EF7FA5"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="148dp"
            android:layout_height="76dp"
            android:layout_marginTop="360dp"
            android:layout_marginLeft="230dp"
            android:background="#EF7FA5"
            android:text="@string/btn2" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/button2"
            android:layout_marginBottom="8dp" />

    </RelativeLayout>




</LinearLayout>
